--- a/imageMapDemo.html
+++ b/imageMapDemo.html
@@ -17,8 +17,12 @@
             width="100%">
 
         <map name="m_usaMap">
-            <area shape="rect" coords="40,12,480,588" href="img/horse.jpg" title="horse">
-            <area shape="rect" coords="500,12,920,588" href="img/cow.jpg" title="cow">
+            <area shape="circle" coords="247,339,219" href="img/horse.jpg" title="horse">
+            <area shape="circle" coords="943,307,219" href="img/cow.jpg" title="cow">
+            <area shape="circle" coords="1651,303,219" href="img/pig.jpg" title="pig">
+            <area shape="circle" coords="247,1039,219" href="img/zbra.jpg" title="zbra">
+            <area shape="circle" coords="955,1031,219" href="img/rabbit.jpg" title="rabbit">
+            <area shape="circle" coords="1683,991,219" href="img/sheep.jpg" title="sheep">
         </map>
         <script src="http://code.jquery.com/jquery-latest.min.js"></script>
         <script src="imageMapResizer.min.js"></script>
