jquery https modify

--- a/imageMapDemo.html
+++ b/imageMapDemo.html
@@ -24,7 +24,7 @@
             <area shape="circle" coords="955,1031,219" href="img/rabbit.jpg" title="rabbit">
             <area shape="circle" coords="1683,991,219" href="img/sheep.jpg" title="sheep">
         </map>
-        <script src="http://code.jquery.com/jquery-latest.min.js"></script>
+        <script src="https://code.jquery.com/jquery-latest.min.js"></script>
         <script src="imageMapResizer.min.js"></script>
         <script>
             imageMapResize();
